src/objects/Associations__c.object
<CustomObject>
    <fields>
        <fullName>AMR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMR</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipName>Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliated_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliated Location</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>License Relationships</relationshipLabel>
        <relationshipName>License_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Association_Type__c</fullName>
        <label>Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Designated Architect</fullName>
                </value>
                <value>
                    <fullName>Designated Funeral Director</fullName>
                </value>
                <value>
                    <fullName>Designated Engineer</fullName>
                </value>
                <value>
                    <fullName>Designated Land Surveyor</fullName>
                </value>
                <value>
                    <fullName>Appraiser Trainee</fullName>
                </value>
                <value>
                    <fullName>Funeral Director Intern</fullName>
                </value>
                <value>
                    <fullName>Embalmer Intern</fullName>
                </value>
                <value>
                    <fullName>Timeshare Salesperson</fullName>
                </value>
                <value>
                    <fullName>Camping Resort Salesperson</fullName>
                </value>
                <value>
                    <fullName>Authorized Location</fullName>
                    <isActive>false</isActive>
                    <label>Authorized Location</label>
                </value>
                <value>
                    <fullName>Designated Controlling Person</fullName>
                    <isActive>false</isActive>
                    <label>Designated Controlling Person</label>
                </value>
                <value>
                    <fullName>Designated Person</fullName>
                    <isActive>false</isActive>
                    <label>Designated Person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_License_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch License Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Contact_Name__c</fullName>
        <formula>Child_Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_License_Email__c</fullName>
        <label>Child License Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Child_License_Name__c</fullName>
        <formula>Child_License__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child License Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_License_Type__c</fullName>
        <formula>TEXT( Child_License__r.Credential_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>License Relationships (Parent Licenses)</relationshipLabel>
        <relationshipName>Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Licensee_Name__c</fullName>
        <formula>Child_License__r.MUSW__Applicant__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Datetime__c</fullName>
        <description>Current datetime</description>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current datetime</inlineHelpText>
        <label>Current Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Zip_Code__c</fullName>
        <label>Location Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_License_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main License Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contact_Name__c</fullName>
        <formula>HYPERLINK( &apos;https://wadolbuspro--dev.lightning.force.com/lightning/r/Contact/&apos;&amp;  Parent_License__r.MUSW__Applicant__r.Id &amp;&apos;/view&apos;,  Parent_License__r.MUSW__Applicant__r.FirstName &amp; &quot; &quot;&amp; Parent_License__r.MUSW__Applicant__r.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_License_Email__c</fullName>
        <label>Parent License Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_License_Name__c</fullName>
        <formula>Parent_License__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent License Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_License_Type__c</fullName>
        <formula>TEXT(Parent_License__r.Credential_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_License__c</fullName>
        <label>Parent License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>License Relationships (Child Licenses)</relationshipLabel>
        <relationshipName>Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Licensee_Name__c</fullName>
        <formula>Parent_License__r.Licensee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <label>Source Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Add</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Remove</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Generate Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invitation_send_date__c</fullName>
        <label>invitation send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>resend_Invitation__c</fullName>
        <formula>IF( AND( NOT(ISPICKVAL(Status__c, &apos;Invited&apos;)), TODAY()- invitation_send_date__c &gt;= 7 ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>resend Invitation</label>
        <type>Checkbox</type>
    </fields>
    <label>License Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_License__c</columns>
        <columns>Child_License__c</columns>
        <columns>Association_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LRN-{0000000}</displayFormat>
        <label>License Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Relationships</pluralLabel>
    <recordTypes>
        <fullName>Designated_Person</fullName>
        <active>true</active>
        <label>Designated Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <label>DoNotUse_Location</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>